<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/distance_standard_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rate_dialog_info"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/size_rate_dialog_info" />

    <Button
        android:id="@+id/btn_rate_dialog_rate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_standard_dialog"
        android:background="@color/colorPrimaryLight"
        android:text="@string/rate"
        android:textColor="@color/colorTextPrimary" />

    <Button
        android:id="@+id/btn_rate_dialog_remind_me_later"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_standard_dialog"
        android:background="@color/colorPrimaryLight"
        android:text="@string/remind_me_later"
        android:textColor="@color/colorTextPrimary" />

    <Button
        android:id="@+id/btn_rate_dialog_no_thx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_standard_dialog"
        android:background="@color/colorPrimaryLight"
        android:text="@string/no_thanks"
        android:textColor="@color/colorTextPrimary" />

</LinearLayout>